--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,15 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.8.0"
-clap = "4.5.13"
-tokio = { version = "1.39.2", features = ["full"] }
 tokio-macros = "2.4.0"
+
+[dependencies.clap]
+version = "4.5.3"
+features = [
+    "derive",
+    "color"
+]
+
+[dependencies.tokio]
+version = "1.39.2"
+features = ["full"]
