--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.8.0"
+lazy_static = "1.5.0"
+socket2 = "0.5.7"
 tokio-macros = "2.4.0"
 
 [dependencies.clap]
