--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,13 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.8.0"
+chrono = "0.4.38"
 lazy_static = "1.5.0"
+serde = "1.0.204"
+serde_json = "1.0.122"
 socket2 = "0.5.7"
 tokio-macros = "2.4.0"
+uuid = "1.10.0"
 
 [dependencies.clap]
 version = "4.5.3"
@@ -15,6 +19,10 @@ features = [
     "derive",
     "color"
 ]
+
+[dependencies.sea-orm]
+version = "1.0.0"
+features = ["sqlx-mysql", "runtime-tokio-native-tls", "with-chrono", "with-json", "macros"]
 
 [dependencies.tokio]
 version = "1.39.2"
