--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,15 +2,23 @@
 name = "swarm-weave"
 version = "0.1.0"
 edition = "2021"
+description = "'Perseverancia' backend implementation in Rust; This is a general backend for my many apps."
+authors = ["Felix Riddle <email@email.com>"]
+keywords = ["backend", "general", "api", "rust"]
+categories = ["web-programming", "database"]
 
 [dependencies]
 actix-web = "4.8.0"
 chrono = "0.4.38"
+eframe = "0.28.1"
+egui = "0.28.1"
+egui-winit = "0.28.1"
 lazy_static = "1.5.0"
 serde = "1.0.204"
 serde_json = "1.0.122"
 socket2 = "0.5.7"
 tokio-macros = "2.4.0"
+toml = "0.8.19"
 uuid = "1.10.0"
 
 [dependencies.clap]
