--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ dotenv = "0.15.0"
 eframe = "0.28.1"
 egui = "0.28.1"
 egui-winit = "0.28.1"
+env_logger = "0.11.5"
+futures = "0.3.30"
+jsonwebtoken = "9.3.0"
 lazy_static = "1.5.0"
 serde = "1.0.204"
 serde_json = "1.0.122"
