--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ lazy_static = "1.5.0"
 serde = "1.0.204"
 serde_json = "1.0.122"
 socket2 = "0.5.7"
+sysinfo = "0.31.2"
 tokio-macros = "2.4.0"
 toml = "0.8.19"
 uuid = "1.10.0"
