--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ chrono = "0.4.38"
 dotenv = "0.15.0"
 env_logger = "0.11.5"
 futures = "0.3.30"
+get_if_addrs = "0.5.3"
 jsonwebtoken = "9.3.0"
 lazy_static = "1.5.0"
 serde = "1.0.204"
