--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ futures = "0.3.30"
 get_if_addrs = "0.5.3"
 jsonwebtoken = "9.3.0"
 lazy_static = "1.5.0"
+names = "0.14.0"
 serde = "1.0.204"
 serde_json = "1.0.122"
 socket2 = "0.5.7"
