--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ actix-session = "0.10.0"
 actix-web = "4.8.0"
 async-trait = "0.1.81"
 chrono = "0.4.38"
+dns-parser = "0.8.0"
 dotenv = "0.15.0"
 env_logger = "0.11.5"
 futures = "0.3.30"
@@ -27,6 +28,7 @@ get_if_addrs = "0.5.3"
 jsonwebtoken = "9.3.0"
 lazy_static = "1.5.0"
 mdns = "3.0.0"
+mockito = "1.5.0"
 names = "0.14.0"
 serde = "1.0.204"
 serde_json = "1.0.122"
