--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,6 @@ futures-util = "0.3.30"
 get_if_addrs = "0.5.3"
 jsonwebtoken = "9.3.0"
 lazy_static = "1.5.0"
-mdns = "3.0.0"
 mockito = "1.5.0"
 names = "0.14.0"
 serde = "1.0.204"
@@ -35,6 +34,7 @@ serde_json = "1.0.122"
 socket2 = "0.5.7"
 tokio-macros = "2.4.0"
 toml = "0.8.19"
+tracing-subscriber = "0.3.18"
 uuid = "1.10.0"
 
 [dependencies.clap]
@@ -46,6 +46,13 @@ features = [
 
 [dependencies.entity]
 path = "entity"
+
+[dependencies.libp2p]
+version = "0.54.0"
+features = [
+    "mdns",
+    "tokio"
+]
 
 [dependencies.migration]
 path = "migration"
