--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,8 +50,18 @@ path = "entity"
 [dependencies.libp2p]
 version = "0.54.0"
 features = [
+    "autonat",
+    "dns",
+    "gossipsub",
+    "macros",
     "mdns",
-    "tokio"
+    "metrics",
+    "noise",
+    "quic",
+    "relay",
+    "tcp",
+    "tokio",
+    "yamux"
 ]
 
 [dependencies.migration]
@@ -66,6 +76,7 @@ version = "0.31.2"
 features = [
     "serde"
 ]
+
 [dependencies.tokio]
 version = "1.39.2"
 features = ["full"]
