--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ futures-util = "0.3.30"
 get_if_addrs = "0.5.3"
 jsonwebtoken = "9.3.0"
 lazy_static = "1.5.0"
+libp2p-identity = "0.2.9"
 mockito = "1.5.0"
 names = "0.14.0"
 serde = "1.0.204"
@@ -53,6 +54,7 @@ features = [
     "autonat",
     "dns",
     "gossipsub",
+    "identify",
     "macros",
     "mdns",
     "metrics",
