--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ socket2 = "0.5.7"
 tokio-macros = "2.4.0"
 toml = "0.8.19"
 tracing-subscriber = "0.3.18"
-uuid = "1.10.0"
+uuid-macro-internal = "1.10.0"
 vfs = "0.12.0"
 
 [dependencies.clap]
@@ -86,3 +86,10 @@ features = [
 version = "1.39.2"
 features = ["full"]
 
+[dependencies.uuid]
+version = "1.10.0"
+features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+]
