--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ serde_json = "1.0.122"
 socket2 = "0.5.7"
 tokio-macros = "2.4.0"
 toml = "0.8.19"
+tracing-appender = "0.2.3"
 tracing-subscriber = "0.3.18"
 uuid-macro-internal = "1.10.0"
 vfs = "0.12.0"
