--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,12 +30,14 @@ lazy_static = "1.5.0"
 libp2p-identity = "0.2.9"
 mockito = "1.5.0"
 names = "0.14.0"
+nanoid = "0.4.0"
 rand = "0.8.5"
 serde = "1.0.204"
 serde_json = "1.0.122"
 socket2 = "0.5.7"
 tokio-macros = "2.4.0"
 toml = "0.8.19"
+tracing = "0.1.40"
 tracing-appender = "0.2.3"
 tracing-subscriber = "0.3.18"
 uuid-macro-internal = "1.10.0"
