--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ mockito = "1.5.0"
 names = "0.14.0"
 nanoid = "0.4.0"
 rand = "0.8.5"
+reqwest = "0.12.7"
 serde = "1.0.204"
 serde_json = "1.0.122"
 socket2 = "0.5.7"
