--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,12 @@ members = [".", "entity", "migration"]
 [dependencies]
 actix-session = "0.10.0"
 actix-web = "4.8.0"
+anyhow = "1.0.86"
 async-trait = "0.1.81"
 chrono = "0.4.38"
 dns-parser = "0.8.0"
 dotenv = "0.15.0"
 env_logger = "0.11.5"
-futures = "0.3.30"
 futures-util = "0.3.30"
 get_if_addrs = "0.5.3"
 jsonwebtoken = "9.3.0"
@@ -46,6 +46,13 @@ features = ["derive", "color"]
 
 [dependencies.entity]
 path = "entity"
+
+[dependencies.futures]
+version = "0.3.30"
+features = [
+	"executor",
+	"thread-pool"
+]
 
 [dependencies.libp2p]
 version = "0.54.0"
