--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ reqwest = "0.12.7"
 serde = "1.0.204"
 serde_json = "1.0.122"
 socket2 = "0.5.7"
+strum = "0.26.3"
+strum_macros = "0.26.4"
 tokio-macros = "2.4.0"
 toml = "0.8.19"
 tracing = "0.1.40"
